--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "popper.js": "^1.16.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "@firebase/firestore": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
